# de-eu-capitals-weather-data

./: .gitignore  README.md  docker-compose.yml
01_ingest/: Dockerfile  data_provider_meteostat.py  pyproject.toml
01_ingest/seeds/: capitals.csv
02_spark/: Dockerfile  clean_data_and_bigquery_ingest.py  pyproject.toml
03_dbt/: .user.yml  Dockerfile  dbt_project.yml  entrypoint.sh  profiles.yml  pyproject.toml  report.py
03_dbt/dbt_project/: pyproject.toml
03_dbt/models/: sources.yml  top_10_dryest_period_by_capital.sql  top_10_foggiest_period_by_capital.sql  top_10_foggiest_towns.sql  top_10_max_temp_capitals.sql  top_10_min_temp_capitals.sql  top_10_rainiest_capitals_by_amount.sql  top_10_rainiest_period_by_capital.sql  top_10_snowest_capitals.sql  top_10_snowest_period_by_capital.sql  top_10_sunniest_period_by_capital.sql  weather_station_constant_work_days_per_capital.sql
credentials/: config.json
